--- a/home.html
+++ b/home.html
@@ -1,2 +1,4 @@
 <h5>Hi!If you can see this text It means you can access the internet!</h5>
 <h5>你好啊 如果你能看到这行文本 说明你的设备已经接入互联网！enjoy the 网上冲浪！</h5>
+<h5>网站正在规划搭建 拭目以待！</h5>
+<h5>网站管理员：Wandermuluo   QQ:180825523  Email:3587525182@qq.com</h5>
